# repo-health-inspector

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/reports/: gogun-rgb-ai-hype-radar-report.json  gogun-rgb-ai-hype-radar-report.md  gogun-rgb-ai-work-rollback-logbook-report.json  gogun-rgb-ai-work-rollback-logbook-report.md  gogun-rgb-repo-health-inspector-report.json  gogun-rgb-repo-health-inspector-report.md
reports/: sample-project-report.json  sample-project-report.md
src/repo_health/: __init__.py  __main__.py  cli.py  config.py  github_client.py  models.py  report_generator.py  repository_loader.py  scoring.py  utils.py
src/repo_health/rules/: __init__.py  _helpers.py  documentation.py  maintenance.py  security.py  structure.py  testing.py
tests/: conftest.py  test_cli.py  test_example_reports.py  test_github_client.py  test_local_inspection.py  test_maintenance_rules.py  test_models_and_utils.py  test_package_metadata.py  test_report_generator.py  test_repository_loader.py  test_rules.py  test_scoring.py  test_url_parsing.py
tests/fixtures/sample_project/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
tests/fixtures/sample_project/.github/workflows/: ci.yml
tests/fixtures/sample_project/src/sample_project/: __init__.py  cli.py
tests/fixtures/sample_project/tests/: test_cli.py
