[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "repo-health-inspector"
version = "0.1.0"
description = "A Python CLI that evaluates GitHub repositories for documentation, testing, structure, security, and maintenance readiness."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Go Geon", email = "gogun000209@gmail.com" }
]
keywords = [
  "github",
  "cli",
  "portfolio",
  "open-source",
  "repository-health",
  "static-analysis",
  "project-quality",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "rich>=13.7,<15.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2.0",
  "coverage[toml]>=7.6,<8.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.5,<1.0",
  "twine>=5.1,<7.0",
]

[project.scripts]
repo-health = "repo_health.cli:app"

[project.urls]
Homepage = "https://github.com/gogun-rgb/repo-health-inspector"
Repository = "https://github.com/gogun-rgb/repo-health-inspector"
Issues = "https://github.com/gogun-rgb/repo-health-inspector/issues"
Changelog = "https://github.com/gogun-rgb/repo-health-inspector/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_health"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ARG", "B", "C4", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_decorators = false
warn_unused_ignores = true
files = ["src/repo_health", "tests"]
exclude = ["tests/fixtures"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=repo_health",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]

[tool.coverage.run]
branch = true
source = ["repo_health"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
